<resources>
    <string name="app_name">ISI-EDU</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="sign_in">Sign In</string>
    <string name="formation">Formation</string>
    <string name="mark">My marks</string>
    <string name="university">University</string>
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degrees">Degrees</string>
    <string name="o_level">O Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">Save</string>
    <string name="error_fields">Required fields</string>
    <string name="error_parameters">Credentials error</string>
    <string name="error_connection">Connection error</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Please wait</string>
    <string name="success_save">Successfully save</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="presentation">Presentation</string>
    <string name="home_second">Home Second</string>
    <string name="text_isi">The Higher Institute of Computer Science (ISI), by the availability and commitment of its Director General in any action aimed at promoting youth, is an institute which has 20 years experience in professional training. Founded in 1991, ISI is active in academic and modular training in the fields of management and IT in order to participate in the policy of implementation by the government to develop the education and training sector.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university">University</string>


</resources>
