<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_all"
    tools:context=".InscriptionActivity">

    <TextView
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <TextView
        android:textColor="@color/colorBlueDark"
        android:layout_margin="@dimen/size_all"
        android:textSize="@dimen/size_title"
        android:text="@string/degrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <CheckBox
        android:id="@+id/cbOLevel"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/size_middle"
        android:layout_marginTop="@dimen/size_top"
        android:text="@string/o_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </CheckBox>

    <CheckBox
        android:id="@+id/cbBachelor"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/size_middle"
        android:layout_marginTop="@dimen/size_top"
        android:text="@string/bachelor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </CheckBox>

    <CheckBox
        android:id="@+id/cbMaster"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/size_middle"
        android:layout_marginTop="@dimen/size_top"
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </CheckBox>

    <Button
        android:background="@color/colorBlueAccent"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_marginTop="@dimen/size_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>